# toney

./: CMakeLists.txt  README.md  build.sh
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SpectrumView.cpp  SpectrumView.h
